add colors to graph

--- a/app/views/groups/show.html.slim
+++ b/app/views/groups/show.html.slim
@@ -32,7 +32,7 @@
 
         var options = {
           title: 'Goals by status',
-          pieHole: 0.4,
+          pieHole: 0.4, colors: ['6F777B','#006435','FFBF47','B10E1E','005EA5']
         };
 
         var chart = new google.visualization.PieChart(document.getElementById('donutchart'));
