Added pie charts to multiple pages.

--- a/app/assets/stylesheets/shared.sass
+++ b/app/assets/stylesheets/shared.sass
@@ -282,3 +282,24 @@ h2.score
       font-size: 3rem
       min-width: 40px
       @extend .heading-medium
+
+form#search input.submit
+  position: absolute
+  z-index: 4
+  right: 0
+  top: 0
+  width: 35px
+  height: 35px
+  border: 1px solid #df3034
+  border-width: 0 0 0 1px
+  border-left-color: #222
+  -webkit-border-radius: 0
+  -moz-border-radius: 0
+  border-radius: 0
+  overflow: hidden
+  text-indent: -5000px
+  color: #fff
+  background-color: #df3034
+  background-image: url(https://assets.digital.cabinet-office.gov.uk/static/search-button.png)
+  background-repeat: no-repeat
+  background-position: 0 50%
