--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -10,7 +10,11 @@
 - content_for :page_title do
   | GDS Goals
 - content_for :inside_header do
-end
+  /form#search.site-search method="get"
+    .content
+      label for="site-search-text" Search the service manual
+      input#site-search-text.js-search-focus type="search" name="q" title="Search" role="search"
+      input.submit type="submit" value="Search"
 - content_for :header_class do
   | with-proposition
 - content_for :proposition_header do
