--- a/app/views/teams/show.html.slim
+++ b/app/views/teams/show.html.slim
@@ -1,5 +1,5 @@
 .row
-  .col-md-12
+  .col-md-6
     /h3 =link_to :Teams, teams_path
     h3 =link_to "Groups and Teams", groups_path
     h1 style="margin-bottom: 1rem" = @team.name
@@ -8,8 +8,11 @@
         'Part of the
         =link_to @team.group.name + " Group", @team.group
     .pull-right =link_to "Edit Team", edit_team_path(@team) if is_admin?
-
-    h3 Goals (#{@team.goals.count})
+  .col-sm-6
+    ==render partial: 'goals/pie_chart', locals: {goals: @team.goals}
+.row
+  .col-sm-12
+    h2 Goals (#{@team.goals.count})
     /= (params["expand_all"]) ? link_to("Collapse all", team_path(@team)) : link_to("Expand all", "?expand_all=1")
     //== render :partial=>"shared/sub_goals", :locals=>{sub_goals: @team.goals}
     //== render :partial=>"shared/sub_goals", :locals=>{sub_goals: Goal.all.reject{|goal| goal.parent.get_team == goal.get_team}}
