add ability to click a person's name and see goals owned by that person.

--- a/app/views/goals/_big_goal_meta.html.slim
+++ b/app/views/goals/_big_goal_meta.html.slim
@@ -10,7 +10,7 @@
 
   h4 Owner
   - if (@goal.owner.present?)
-    p =@goal.owner.name
+    p =link_to @goal.owner.name, @goal.owner
   -else
     p style="color: #f00" This goal needs an owner. #{link_to "(Assign one now)", edit_goal_path if (can_modify? @goal)}
   - if (@goal.get_team)
