--- a/app/views/groups/show.html.slim
+++ b/app/views/groups/show.html.slim
@@ -8,23 +8,30 @@
     h4 £#{@group.budget_in_millions}m - #{@group.headcount} people - #{@group.goals.count} goals
     -if is_admin?
       =link_to "Edit Group", edit_group_path(@group)
+  .col-md-6
+    ==render partial: 'goals/pie_chart', locals: {goals: @group.goals}
+
+.row
+  .col-sm-6
     h2 Teams
     ul.biglist
       - @group.teams.each do |team|
         li
           => link_to team.name, team
           small ="(" + team.goals.count.to_s + ")"
-  .col-md-6
-    ==render partial: 'goals/pie_chart', locals: {goals: @group.goals}
-
+  -if is_admin?
+    .col-sm-6.noprint.
+      .pull-right
+        =link_to "New team", new_team_path
 .row
-  .col-md-12
-    -if (is_admin?)
-      .noprint.pull-right
-        =link_to "Create a new goal for this group",new_goal_path(group:@group)
+  .col-sm-6
     h2 Goals (#{@group.top_level_goals.count})
-    .row
-      ==render @group.top_level_goals
+  -if (is_admin?)
+    .col-sm-6.noprint
+      .pull-right
+        =link_to "Create a new goal for this group",new_goal_path(group:@group)
+.row
+  ==render @group.top_level_goals
   /
     .col-md-6
       h2 Staff
