css tweaks to search button

--- a/app/assets/stylesheets/shared.sass
+++ b/app/assets/stylesheets/shared.sass
@@ -288,14 +288,15 @@ form#search
   input.js-search-focus
     margin-top: 5px
     width: 200px
-    padding-left: 1px
+    padding-left: 5px
+    font-size: 16px
     border: 2px solid #333
     @media (max-width: 400px)
       width: 180px
 
   input.submit
-    width: 24px
-    height: 24px
+    width: 26px
+    height: 26px
     border: 1px solid #df3034
     border-left-color: #222
     -webkit-border-radius: 0
@@ -309,3 +310,4 @@ form#search
     background-repeat: no-repeat
     background-position: 6.5% 49%
     margin-left: 5px
+    padding-top: 4px
