updates to readme and about page

--- a/app/views/welcome/about.html.slim
+++ b/app/views/welcome/about.html.slim
@@ -10,4 +10,4 @@
   p Not publically just yet. This way of setting and tracking goals is new for GDS so we'd like to work out some of the issues before we share it with the world. However, everyone in GDS should be familiar with what's in here now so please share and debate internally as much as you like!
 
   h2 Giving feedback on the tool
-  p Please give feedback on the tool to the Delivery Ops team (Peter KappusIf you have advice on user research, technology, GDS standards, content design, comms, engagement, policy, etc. Please get in touch! The code is all on <a href="https://github.com/peterkappus/panoflex">github</a> and pull-requests are more than welcome!
+  p Please give feedback on the tool to Peter Kappus and Lucy Fosbraey in the Delivery Ops team. If you have advice on user research, technology, GDS standards, content design, comms, engagement, policy, etc. Please get in touch! The code is all on <a href="https://github.com/peterkappus/panoflex">github</a> and pull-requests are more than welcome!
