fix sub-goal ordering (by deadline), add prev/next navigation between sub-goals, tweak look of doughnut charts.

--- a/app/assets/stylesheets/shared.sass
+++ b/app/assets/stylesheets/shared.sass
@@ -54,6 +54,14 @@
   h2
     font-size: 4.5rem
 
+.big_goal_block
+  h2
+    margin-top: 10px
+  .next_prev_nav
+    a
+      font-size: 1.5rem
+
+
 .phase-banner-alpha span
   display: inline
   line-height: 2rem
@@ -308,7 +316,8 @@ form#search
     text-indent: -5000px
     color: #fff
     background-color: #df3034
-    background-image: url(https://assets.digital.cabinet-office.gov.uk/static/search-button.png)
+    /*background-image: url(https://assets.digital.cabinet-office.gov.uk/static/search-button.png)*/
+    background-image: url(/public/images/search-button.png)
     background-repeat: no-repeat
     background-position: 6.5% 49%
     margin-left: 5px
