rip out all the old panoflex stuff.

--- a/app/views/goals/index.html.slim
+++ b/app/views/goals/index.html.slim
@@ -2,7 +2,7 @@
   = render 'breadcrumb'
 
 .row.padded-row
-  .col-sm-8.signage
+  .col-sm-8
     h1 What will GDS do this year?
     details.noprint
       summary
