--- a/app/views/scores/edit.html.slim
+++ b/app/views/scores/edit.html.slim
@@ -1,10 +1,5 @@
 h1 Edit a score
-
-.row
-  .col-sm-2
-    h3 Goal:
-  .col-sm-10
-    h2 =@score.goal.name
+p For Admin use only. Edit a previous score.
 .row
   .col-sm-12
     = render 'form'
