--- a/app/views/scores/new.html.slim
+++ b/app/views/scores/new.html.slim
@@ -1,7 +1,9 @@
 .row
   .col-md-8
     =link_to "&laquo; Back".html_safe, @goal
-    h1 Report progress
+    h1 Make a new update
+    p Use this form to record a new update against this goal.
+
 .row
   .col-md-8
     = render 'form'
