--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -7,6 +7,7 @@
     == render partial: 'goals/pie_chart', locals: {goals: @user.goals}
 .row
   .col-sm-12
+    h2 Goals (#{@user.goals.count})
     -if(@user.goals.empty?)
       .notice
         i.icon.icon-important
