added my_fixtures rake task(s)

--- a/app/views/goals/sdp.html.slim
+++ b/app/views/goals/sdp.html.slim
@@ -1,6 +1,8 @@
 .row
-  .col-sm-6
+  .col-sm-12
     h1 Single Departmental Plan
+.row
+  .col-sm-6
     p.lede These goals have been selected for reporting in the Single Departmental Plan.
   .col-sm-6
     ==render partial: 'goals/pie_chart', locals: {goals: @goals}
