--- a/app/views/users/index.html.slim
+++ b/app/views/users/index.html.slim
@@ -17,7 +17,7 @@
       - @users.each do | user |
         tr
           td
-            = user.name
+            = link_to user.name, user
           td
             = user.email
           td
