--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -74,4 +74,10 @@
               .alert.alert-warning
                 h2 NOTE: This site has moved to <a href="http://gdsdelivery.herokuapp.com">http://gdsdelivery.herokuapp.com</a>. Please update your bookmarks.
       = yield
+
+- content_for :footer_top do
+  - if (Rails.env.development? && User.all.count > 0)
+    /=link_to "HELLOO", User.first
+    =link_to "Sign in as admin (Development only)", signin_path(email: User.where(admin: true).first.email)
+
 = render template: "layouts/govuk_template"
