--- a/app/assets/stylesheets/shared.sass
+++ b/app/assets/stylesheets/shared.sass
@@ -243,7 +243,7 @@ h2.score
 .button.danger
   background: $red
 
-div.danger, span.danger
+div.danger, span.danger, a.danger
   color: $red
 
 .cancel
