Change buttons to use the word 'progress' on making updates. REMOVE DATE VALIDATION. STOP UPDATING earliest/latest dates. TODO: Remove these entirely. Tiny style tweaks

--- a/app/assets/stylesheets/shared.sass
+++ b/app/assets/stylesheets/shared.sass
@@ -79,8 +79,10 @@
     text-align: left !important
     font-size: 20px !important
   .subgoal-box
-    h3
-      margin-top: 11px
+    h3.number
+      font-size: 2rem
+      margin-top: 0.8rem
+      display: block
 
 
 @media screen
