--- a/app/views/goals/_goal.html.slim
+++ b/app/views/goals/_goal.html.slim
@@ -2,7 +2,7 @@
 div class="col-sm-#{12/cols} subgoal-box" id="goal_#{goal_counter+1}"
   .row
     .col-xs-1
-      h3  =goal_counter+1
+      h3.number  =goal_counter+1
     span.col-xs-11.goal
       .tiny_status
         div class="#{goal.status}"
@@ -11,12 +11,12 @@ div class="col-sm-#{12/cols} subgoal-box" id="goal_#{goal_counter+1}"
       -if goal.owner
         .owner =link_to goal.owner.name, goal.owner
         -if goal.score.nil?
-          .owner.danger Never updated
+          .owner.danger No progress reported
         - else
          .owner
            =link_to "Updated" + time_ago_in_words(goal.score.created_at).humanize + " ago", "javascript:$('#update#{goal_counter+1}').toggle()"
          div id="update#{goal_counter+1}" style="display: none" =goal.score.reason
-      .owner Due: #{goal.latest_end_date.strftime("%h %Y")}
+      .owner Due: #{goal.deadline.strftime("%h %Y")}
       .smaller =pluralize(goal.children.count,"Subgoal") unless goal.children.empty?
     /.tiny_status.pull-right ON TRACK
 -if((goal_counter+1) % cols == 0)
