group admin functionality onto a nice yellow panel in team & group pages.

--- a/app/assets/stylesheets/shared.sass
+++ b/app/assets/stylesheets/shared.sass
@@ -261,6 +261,10 @@ div.danger, span.danger, a.danger
     display: block
     margin: 15px 0 10px 0
 
+.panel.admin
+  margin-top: 2rem
+  border: 0
+  background: #FE8
 
 .status-box
   margin-top: 2rem
